--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/emerald.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emerald</title>
+    <meta name="description" content="A simple and sleek proxy site to evade internet censorship">
+    <meta property='og:description'  content='A simple and sleek proxy site to evade internet censorship'>
+    <meta name='twitter:description' content='A simple and sleek proxy site to evade internet censorship'>
+    <meta property="og:image"  content="/emerald.png">
+    <meta property="twitter:image"  content="/emerald.png">
+    <meta name="keywords" content="unblock, unblocked, emerald, emerald proxy, proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
     <script src="/uv/uv.bundle.js"></script>
     <script src="/uv/uv.config.js"></script>
   </head>
